<resources>
    <string name="app_name">Story App</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="username">Reyza190</string>
    <string name="logout">logout</string>
    <string name="camera">Camera</string>
    <string name="galery">Galery</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="foto_story">foto story</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="retry">Coba lagi</string>
    <string name="add_location">Add Location</string>
</resources>